<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_kw_43">kw
43</string>
<string name="lbl_plej_satataj">Plej Satataj</string>
<string name="lbl_radio_vatikana">radio vatikana</string>
<string name="msg_24_10_2021_ange">24.10.2021 Angelus</string>
<string name="msg_radio_havano_ku">radio havano kubo</string>
<string name="lbl_kernpunkto">Kernpunkto</string>
<string name="lbl_spiritsma_voco">Spiritsma voco</string>
<string name="msg_elsendo_de_20212">Elsendo de 2021-10-23</string>
<string name="msg_elsendo_de_20213">Elsendo de 2021-10-23</string>
<string name="lbl_start_side_3">Start side 3</string>
<string name="msg_elsendo_de_20214">Elsendo de 2021-10-19</string>
<string name="lbl_start_side_4">Start Side 4</string>
<string name="msg_elsendo_de_20215">Elsendo de 2021-10-23</string>
<string name="lbl_kanaloj">Kanaloj</string>
<string name="lbl_pri_sano">pri sano</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_elsendo_de_20216">Elsendo de 2021-10-22</string>
<string name="msg_elsendo_de_20217">Elsendo de 2021-10-21</string>
<string name="lbl_hejmo">Hejmo</string>
<string name="lbl_favoritter">Favoritter</string>
<string name="msg_kaliningrada_e">kaliningrada e-radio</string>
<string name="lbl_sekva">Sekva</string>
<string name="lbl_varsovia_vento">Varsovia Vento</string>
<string name="msg_la_lingvo_frate">la lingvo frateco</string>
<string name="msg_3zzz_en_esperan">3zzz en esperanto</string>
<string name="lbl_pola_retradio">pola retradio</string>
<string name="lbl_hjemmesk_rm">Hjemmeskærm</string>
<string name="lbl_radio_frei">radio frei</string>
<string name="msg_lastatempa_luda">Lastatempa ludado</string>
<string name="lbl_elsendo">Elsendo</string>
<string name="lbl_kio_novas">Kio novas</string>
<string name="msg_movada_vidpunkt">movada vidpunkto</string>
<string name="msg_e33a_sekretaj_n">e33a sekretaj novajoj</string>
<string name="msg_esperanto_2019">esperanto 2019-12-01</string>
<string name="msg_pri_la_dan_ero">Pri la danĝero de iksodoj rakontas Lisa, la intervjuon muntis: Natalija Pendjiur (dua parto)

Sara Spanò voĉlegas por vi rakonton de Júlia Sigmond: \'La Bluaj Floroj\' kadre de MondaFest\' 2020 organizita de UEA

La profesoro de Esperanto: Zamenhofaj meditoj de Federico Gobbo</string>
<string name="lbl_bonvenon">Bonvenon</string>
<string name="lbl_muzaiko">Muzaiko</string>
<string name="msg_e32a_telepatio">E32a telepatio kaj aliaj mensogoj</string>
<string name="lbl_la_malfamuloj">La Malfamuloj</string>
<string name="lbl_vinilkosmo">vinilkosmo</string>
<string name="lbl_start_side_full">Start Side FULL</string>
<string name="lbl_sercu">Sercu</string>
<string name="msg_auskultu_kie_v">Auskultu, kie vi volas, kiam vi volas</string>
<string name="lbl_kanaler">Kanaler</string>
<string name="lbl_s_g">Søg</string>
<string name="msg_check_your_app">Check your app\'s UI from the below demo screens of your app.</string>
<string name="lbl_specefik_kanal">Specefik Kanal</string>
<string name="lbl_peranto">peranto</string>
<string name="msg_esp_magazino_tu">esp.magazino tuluzo</string>
<string name="msg_premu_apud_por">Premu apud por komenci</string>
<string name="msg_elsendo_de_2021">Elsendo de 2021-10-24</string>
<string name="lbl_plaj_satataj">Plaj Satataj</string>
<string name="msg_muzaiko_estas_t">Muzaiko estas tuttempa tutmonda tutmojosa tutesperanta retradio-kanalo! Muzaiko ludas por vi 24 horojn en tago muzikon, programerojn, novaĵojn, informojn, raportojn, arkivaĵojn kaj multe pli!</string>
<string name="lbl_afspiller">Afspiller</string>
</resources>
