<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appNavigationVM" type="com.application.app.modules.appnavigation.data.viewmodel.AppNavigationVM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linear1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:gravity="center|start"
                android:id="@+id/txtAppNavigation"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:text="@{appNavigationVM.appNavigationModel.txtAppNavigation}"
                style="@style/txtregular20" tools:text="@string/lbl_app_navigation"/>
            <TextView android:gravity="center|start"
                android:id="@+id/txtCheckYourApp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@{appNavigationVM.appNavigationModel.txtCheckYourApp}"
                style="@style/txtregular16" tools:text="@string/msg_check_your_app"/>
            <View android:background="@color/black_900"
                android:id="@+id/line" android:layout_gravity="center"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear3"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtStartSideFull"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtStartSideFull}"
                        style="@style/txtregular20" tools:text="@string/lbl_start_side_full"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line1"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear4"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtStartSide3"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtStartSide3}"
                        style="@style/txtregular20" tools:text="@string/lbl_start_side_3"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line2"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear5"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtStartSide4"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtStartSide4}"
                        style="@style/txtregular20" tools:text="@string/lbl_start_side_4"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line3"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear6"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtHjemmeskRm"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtHjemmeskRm}"
                        style="@style/txtregular20" tools:text="@string/lbl_hjemmesk_rm"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line4"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear7"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtKanaler"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtKanaler}"
                        style="@style/txtregular20" tools:text="@string/lbl_kanaler"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line5"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear8"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtAfspiller"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtAfspiller}"
                        style="@style/txtregular20" tools:text="@string/lbl_afspiller"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line6"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear9"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtSG"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtSG}"
                        style="@style/txtregular20" tools:text="@string/lbl_s_g"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line7"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear10"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtFavoritter"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtFavoritter}"
                        style="@style/txtregular20" tools:text="@string/lbl_favoritter"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line8"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear11"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtSpecefikKanal"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtSpecefikKanal}"
                        style="@style/txtregular20" tools:text="@string/lbl_specefik_kanal"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line9"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
