<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="sGVM" type="com.application.app.modules.sg.data.viewmodel.SGVM"/>
    </data>
    <FrameLayout android:id="@+id/frame"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/image"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY" android:src="@drawable/img_elements_1_surface_a_side_5"/>
        <LinearLayout android:id="@+id/linear"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linear1"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/image1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_27pxv"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_navigation_chevronleft24px"/>
                    <ImageView android:id="@+id/image2"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_347pxh"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_action_settings_1"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <ScrollView android:clipToPadding="false"
                android:fillViewport="true" android:id="@+id/scrollView"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1" android:layout_width="match_parent">
                <LinearLayout android:id="@+id/linear2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <FrameLayout android:id="@+id/frame1"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_28pxh"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_width="match_parent" style="@style/groupStylewhite_A700cornerRadius">
                        <FrameLayout android:id="@+id/frame2"
                            android:layout_gravity="center"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_6pxv"
                            android:layout_marginEnd="@dimen/_5pxh"
                            android:layout_marginStart="@dimen/_5pxh"
                            android:layout_marginTop="@dimen/_6pxv" android:layout_width="match_parent">
                            <TextView android:gravity="center|start"
                                android:id="@+id/txtSercu"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:text="@{sGVM.sGModel.txtSercu}"
                                style="@style/txtRobotoregular24" tools:text="@string/lbl_sercu"/>
                            <ImageView android:id="@+id/image3"
                                android:layout_gravity="center|end"
                                android:layout_height="@dimen/_24pxv"
                                android:layout_marginBottom="@dimen/_6pxv"
                                android:layout_marginEnd="@dimen/_2pxh"
                                android:layout_marginStart="@dimen/_319pxh"
                                android:layout_marginTop="@dimen/_6pxv"
                                android:layout_width="@dimen/_24pxh"
                                android:scaleType="fitXY" android:src="@drawable/img_search"/>
                        </FrameLayout>
                    </FrameLayout>
                    <LinearLayout android:id="@+id/linear3"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_491pxv"
                        android:layout_width="match_parent"
                        android:orientation="vertical" style="@style/groupStylepink_100cornerRadius">
                        <LinearLayout android:id="@+id/linear4"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_8pxv"
                            android:layout_marginStart="@dimen/_12pxh"
                            android:layout_marginTop="@dimen/_13pxv"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <ImageView android:id="@+id/image4"
                                android:layout_gravity="center_vertical"
                                android:layout_height="@dimen/_11pxv"
                                android:layout_marginBottom="@dimen/_21pxv"
                                android:layout_marginTop="@dimen/_11pxv"
                                android:layout_width="@dimen/_38pxh"
                                android:scaleType="centerCrop" android:src="@drawable/img_unnamed_6"/>
                            <FrameLayout android:id="@+id/frame3"
                                android:layout_gravity="center_vertical"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_32pxh"
                                android:layout_weight="1.7" android:layout_width="0dp">
                                <TextView android:gravity="center|start"
                                    android:id="@+id/txtElsendoDe2021"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_12pxv"
                                    android:layout_marginTop="@dimen/_7pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{sGVM.sGModel.txtElsendoDe2021}"
                                    style="@style/txtRobotomedium14" tools:text="@string/msg_elsendo_de_2021"/>
                                <ImageView android:id="@+id/image5"
                                    android:layout_gravity="center|end"
                                    android:layout_height="@dimen/_43pxv"
                                    android:layout_width="@dimen/_43pxh"
                                    android:scaleType="fitXY" android:src="@drawable/img_stopandplayfill_1"/>
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <FrameLayout android:id="@+id/frame4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2pxv" android:layout_width="match_parent">
                        <ImageView android:id="@+id/image6"
                            android:layout_gravity="center|end"
                            android:layout_height="@dimen/_24pxv"
                            android:layout_marginBottom="@dimen/_30pxv"
                            android:layout_marginEnd="@dimen/_141pxh"
                            android:layout_marginStart="@dimen/_246pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="@dimen/_24pxh"
                            android:scaleType="fitXY" android:src="@drawable/img_favoritefill"/>
                        <ImageView android:id="@+id/image7"
                            android:layout_gravity="center|start"
                            android:layout_height="@dimen/_24pxv"
                            android:layout_marginBottom="@dimen/_30pxv"
                            android:layout_marginEnd="@dimen/_245pxh"
                            android:layout_marginStart="@dimen/_142pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="@dimen/_24pxh"
                            android:scaleType="fitXY" android:src="@drawable/img_musicduotone"/>
                        <LinearLayout android:id="@+id/linear5"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <FrameLayout android:clickable="true"
                                android:id="@+id/frame5"
                                android:layout_gravity="center_vertical"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:layout_width="0dp" style="@style/groupStylered_900">
                                <TextView android:gravity="center"
                                    android:id="@+id/txtHejmo"
                                    android:layout_gravity="center"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/_15pxv"
                                    android:layout_marginTop="@dimen/_32pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{sGVM.sGModel.txtHejmo}"
                                    style="@style/txtRobotoregular12_1" tools:text="@string/lbl_hejmo"/>
                            </FrameLayout>
                            <FrameLayout android:clickable="true"
                                android:id="@+id/frame6"
                                android:layout_gravity="center_vertical"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_width="0dp" style="@style/groupStylered_900">
                                <TextView android:gravity="center"
                                    android:id="@+id/txtKanaloj"
                                    android:layout_gravity="center"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/_15pxv"
                                    android:layout_marginTop="@dimen/_32pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{sGVM.sGModel.txtKanaloj}"
                                    style="@style/txtRobotoregular12" tools:text="@string/lbl_kanaloj"/>
                            </FrameLayout>
                            <FrameLayout android:clickable="true"
                                android:id="@+id/frame7"
                                android:layout_gravity="center_vertical"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:layout_width="0dp" style="@style/groupStylered_900">
                                <TextView android:gravity="center"
                                    android:id="@+id/txtPlajSatataj"
                                    android:layout_gravity="center"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/_15pxv"
                                    android:layout_marginTop="@dimen/_32pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{sGVM.sGModel.txtPlajSatataj}"
                                    style="@style/txtRobotoregular12" tools:text="@string/lbl_plaj_satataj"/>
                            </FrameLayout>
                            <LinearLayout android:id="@+id/linear6"
                                android:layout_gravity="center_vertical"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:layout_width="0dp"
                                android:orientation="vertical" style="@style/groupStylered_900">
                                <ImageView android:gravity="center"
                                    android:id="@+id/image8"
                                    android:layout_gravity="center"
                                    android:layout_height="@dimen/_24pxv"
                                    android:layout_marginTop="@dimen/_12pxv"
                                    android:layout_width="@dimen/_24pxh"
                                    android:scaleType="fitXY" android:src="@drawable/img_action_search24px_1"/>
                                <TextView android:gravity="center"
                                    android:id="@+id/txtSercu1"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_15pxv"
                                    android:layout_width="wrap_content"
                                    android:text="@{sGVM.sGModel.txtSercu1}"
                                    style="@style/txtRobotoregular12" tools:text="@string/lbl_sercu"/>
                            </LinearLayout>
                        </LinearLayout>
                        <ImageView android:id="@+id/image9"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_24pxv"
                            android:layout_marginBottom="@dimen/_31pxv"
                            android:layout_marginEnd="@dimen/_348pxh"
                            android:layout_marginStart="@dimen/_39pxh"
                            android:layout_marginTop="@dimen/_8pxv"
                            android:layout_width="@dimen/_24pxh"
                            android:scaleType="fitXY" android:src="@drawable/img_homefill_1"/>
                    </FrameLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</layout>
